--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -13,7 +13,7 @@
     Source: https://www.webmd.com
     </p>
   <br /> 
-  <img src="https://cdn.jsdelivr.net/gh/GabrielArellano/BMI-Calculator@master/BMI%20Calcu%20Part%203.jpg">
+  <img src="https://cdn.jsdelivr.net/gh/GabrielArellano/BMI-Calculator@master/emtech%20pic.png">
 <ion-item>
   <ion-label>Height in Meter:</ion-label>
   <ion-input type="number" [(ngModel)]="height"></ion-input>
